css/style.css
*, *:before, *:after {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

/* ====================
    Variables
==================== */

:root {
    --primary-color: #E8E8E8;
    --primary-color-light: #C3FDFF;
    --primary-color-dark: #5D99C6;
    --primary-text-color: #000;
    --secondary-color: #3949AB;
    --secondary-color-light: #6F74DD;
    --secondary-color-dark: #00227B;
    --secondary-text-color: #FFF;
}

/* ====================
    General
==================== */

body {
    font-family: 'Ubuntu', sans-serif;
    font-size: 1.125rem;
    font-weight: 300;
    line-height: 1.6;
    margin: 0;
    height: 100vh;
    overflow: hidden;
}

img {
    max-width: 100%;
    display: block;
}

/* ====================
    Typography
==================== */

.app {
    font-family: 'Work Sans', sans-serif;
}

/* ------------------
    type.header
------------------ */

header {
    text-align: center;
}

.todo-list-refresher__redo-icon {
    font-size: 1.75em;
    color: white;
}

.todo-list-refresher__redo-icon:hover {
    text-shadow: 1px 3px 5px rgba(0, 0, 0, 0.4);
}

.date {
    font-family: 'Bebas Neue', sans-serif;
    font-size: 2.375rem;
    font-weight: 700;
    color: var(--secondary-text-color);
    letter-spacing: 0.1em;
}

.navbar__tabs {
    font-family: 'Ubuntu', sans-serif;
    color: white;
    list-style: none;
    letter-spacing: 0.045em;
}

.navbar__tabs a {
    padding: .25em 0;
    font-weight: 700;
    color: #707070;
    text-decoration: none;  
    text-transform: uppercase;
    letter-spacing: 1px;
}

nav a:focus,
nav a:hover {
    color: #1792D2;
}

.current-page:hover {
    color: #707070;
}

/* ------------------
    type.main
------------------ */

/* ------------------
    type.item
------------------ */

.todo-list__circle-icon {
    font-size: 1.5625rem;
}

.todo-list__circle-icon--checked {
    color: green;
}

.todo-list__text {
    font-family: 'Ubuntu', sans-serif;
    font-size: 1.25rem;
    color: #707070;
    cursor: pointer
}

.todo-list__text:active {
    cursor: text;
}

/* ------------------
    type.input
------------------ */

.item-adder__input {
    font-family: 'Work Sans', sans-serif;
    font-size: 1.25rem;
}

.item-adder__plus-circle-icon {
    font-family: 'Bebas Neueu', sans-serif;
    font-size: 2rem;
    font-weight: bold;
    color: white;
}

.item-adder__plus-circle-icon:hover {
    color: blue;
}


/* ====================
    Layout
==================== */

.container {
    width: 90%;
    max-width: 1400px;
    margin: 0 auto;
    padding: 0.5em 1em;
}

.container-flex {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

/* ------------------
    layout.header
------------------ */

header {
    background-color: #E8E8E8;
    background-size: cover;
    background-position: center;
    position: relative;
    display: flex;
    justify-content: space-between;
    align-items: center;
    min-height: 12%;
    z-index: 2;
}

.date {
    color: #707070;
}

.current-page {
    border-bottom: 2px solid #707070;
    border-radius: 1.5px;
}

.navbar__tabs {
    padding: 0;
    display: flex;
    flex-direction: column;
    cursor: pointer;
}

.navbar__tab--active {
    margin-bottom: 1em;
}

/* ------------------
    layout.main
------------------ */

main {
    height: 84.5%;
    display: flex;
    flex-flow: column nowrap;
    justify-content: space-between;
}

.main-content {
    overflow: auto;
    scrollbar-width: thin;
    scrollbar-color: #cdcdcd transparent;
    position: relative;
    z-index: 1;
    max-width: 600px;
}

.todo-list {
    padding: 0;
    margin: 0;
}

/* ------------------
    layout.item
------------------ */

[contentEditable=true]:empty:not(:focus):before {
    content: attr(data-text);
}

.todo-list__item {
    position: relative;
    list-style: none;
}

.todo-list__text {
    padding: 0.75em 1em;
    margin: 1em;
    background-color: #F5F591;
    box-shadow: 2px 3px 10px -5px rgba(0, 0, 0, 0.2);
    overflow-wrap: break-word;
}

.todo-list__text:focus {
    outline-color: rgba(0, 0, 0, 0.2);
    outline-style: solid;
}

/* ------------------
    layout.input
------------------ */

.item-adder {
    display: flex;
    justify-content: center;
    align-items: center;
    position: absolute;
    width: 100%;
    background-color: #E8E8E8;
    padding: 10px;
    bottom: 0;
    z-index: 1;
}

.item-adder__input {
    flex: 1;
    border: 0;
    margin-right: auto;
}

.item-adder__plus-circle-icon {
    width: 40px;
    height: 40px;
    border-radius: 50px;
    background: blue;
    cursor: pointer;
    border: 1px solid transparent;
    margin: 0 0.25em;
}

.item-adder__plus-circle-icon:hover {
    background: white;
    border: 1px solid blue;
}

.item-adder__plus-circle-icon:active {
    transform: translateY(1px);
}

/* ====================
    Media Queries
==================== */

@media (min-width: 600px) {
    .main-content {
        max-width: initial;
    }

    .todo-list {
        display: flex;
        flex-wrap: wrap;
        justify-content: center;
    }

    
    .todo-list__item {
        max-width: 45%;
        flex: 1 1 100%;
        border-radius: 10px;
    }
}

@media (min-width: 700px) {
    main {
        height: 88%;
    }

    header {
        display: flex;
        flex-flow: column nowrap;
        justify-content: center;
        align-items: center;
    }

    .date {
        margin-top: 0.325em;
        margin-bottom: 0.2em;
    }
    
    ul.navbar__tabs {
        display: flex;
        flex-direction: row;
        justify-content: space-around;
    }

    .container {
        width: 70%;
    }

    .todo-list__text::before, 
    .todo-list__text::after {
        z-index: -1;
        position: absolute;
        content: '';
        bottom: 15px;
        left: 10px;
        top: 80%;
        width: 50%;
        box-shadow: 0 15px 10px rgba(0, 0, 0, 0.4);
        transform: rotate(-3deg);
    }

    .todo-list__text::after {
        left: auto;
        right: 10px;
        transform: rotate(3deg);
    }

    .todo-list__text {
        position: relative;
        margin: 0;
    }

    .todo-list__item {
        margin: 0.75em;
    }
}


@media (min-width: 880px) {
    header {
        min-height: 8%;
    }

    .container-flex {
        flex-direction: row;
        align-items: center;
    }

    .navbar__tab--completed {
        margin-left: 1em;
    }

    .date {
        font-size: 2.2em;
        margin-bottom: 0;
    }

    ul.navbar__tabs {
        font-size: 1.1em;
        margin-top: 1.275em;
    }

    .container {
        width: 100%;
        max-width: 1700px;
    }

    .todo-list__item {
        max-width: 12.5%;
    }

    .todo-list__text {
        min-height: 6em;
    }
}

